--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                     <button id="topButton" type="button" class="btn border-0 relevantButtonStyle">Top</button>
                   </div>
                   <div class="conteiner_cards">
-                    <div class="card__up">
+                    <div class="card__main">
                       <img src="/assets/img_cards/img1.png" alt="">
                       <div class="user_card">
-                        <img src="/assets/img_navbar/icon login.svg" alt="">
+                        <img src="/assets/img_cards/user2.jpg" alt="">
                         <div class="user_info">
                           <p>BekahHW for OpenSauced</p>
                           <p>Aug 3</p>
@@ -131,16 +131,116 @@
                         </div>
                         <div class="conteiner__time">
                           <span>🗨</span>
-                          <p> 1 comment</p>
+                          <p>4 comment</p>
                           <p>12 read</p>
                           <span>📝</span>
                         </div>
                       </div>
                     </div>
+                   
+                    <div class="card__main">
+                      <div class="user_card">
+                        <img src="/assets/img_cards/user3.jpg" alt="">
+                        <div class="user_info">
+                          <p>Brian for The DEV Team</p>
+                          <p>Aug 3</p>
+                        </div>
+                      </div>
+                      <p class="title__card">refine + DEV Hackathon Winners, Announced!</p>
+                      <div class="hashtag__conteiner">
+                        <p>#music</p>
+                        <p>#webdev</p>
+                        <p>#opensource</p>
+                        <p>#synthesizers</p>
+                      </div>
+                      <div class="reactions__conteiner">
+                        <div class="emoji__conteiner">
+                          <span>💖</span>
+                          <span>🦄</span>
+                          <span>🤯</span>
+                          <span>🙌</span>
+                          <span>🔥</span>
+                          <p>20 reactions</p>
+                        </div>
+                        <div class="conteiner__time">
+                          <span>🗨</span>
+                          <p>5 comment</p>
+                          <p>20 read</p>
+                          <span>📝</span>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="card__main">
+                      <div class="user_card">
+                        <img src="/assets/img_cards/user1.jpg" alt="">
+                        <div class="user_info">
+                          <p>Srikanth</p>
+                          <p>Aug 3</p>
+                        </div>
+                      </div>
+                      <p class="title__card">Start by writing messy code</p>
+                      <div class="hashtag__conteiner">
+                        <p>#programming</p>
+                        <p>#webdev</p>
+                        <p>#python</p>
+                        <p>#career</p>
+                      </div>
+                      <div class="reactions__conteiner">
+                        <div class="emoji__conteiner">
+                          <span>💖</span>
+                          <span>🦄</span>
+                          <span>🤯</span>
+                          <span>🙌</span>
+                          <span>🔥</span>
+                          <p>57 reactions</p>
+                        </div>
+                        <div class="conteiner__time">
+                          <span>🗨</span>
+                          <p>8 comment</p>
+                          <p>16 read</p>
+                          <span>📝</span>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="card__main">
+                      <div class="user_card">
+                        <img src="/assets/img_cards/user4.jpg" alt="">
+                        <div class="user_info">
+                          <p>Nastya for Uploadcare</p>
+                          <p>Aug 3</p>
+                        </div>
+                      </div>
+                      <p class="title__card">How to upload files using JavaScript</p>
+                      <div class="hashtag__conteiner">
+                        <p>#javascript</p>
+                        <p>#webdev</p>
+                        <p>#frontend</p>
+                        <p>#programming</p>
+                      </div>
+                      <div class="reactions__conteiner">
+                        <div class="emoji__conteiner">
+                          <span>💖</span>
+                          <span>🦄</span>
+                          <span>🤯</span>
+                          <span>🙌</span>
+                          <span>🔥</span>
+                          <p>70 reactions</p>
+                        </div>
+                        <div class="conteiner__time">
+                          <span>🗨</span>
+                          <p>35 comment</p>
+                          <p>40 read</p>
+                          <span>📝</span>
+                        </div>
+                      </div>
+                    </div>
+
                   </div>
                 </content>
                   <aside class="d-none d-xl-block col-xl-3">
-                    <div class="card w-100">
+                    <div class="card__up__aside__right card w-100">
                       <div class="d-flex justify-content-between bg-light">
                         <p id="relevantLatestAuthor" class="mb-0 ps-3 py-2"></p>
                         <nav class="navbar navbar-expand-lg pt-0 px-0">
@@ -170,7 +270,7 @@
                         </nav>
                       </div>
                       <div class="text-center">
-                        <img id='relevantLatestImg' src="" class="card-img-top img-card" alt="...">
+                        <img id='relevantLatestImg' src="/assets/img_cards/img2.png" class="card-img-top img-card" alt="...">
                       </div>
                       <div class="card-body">
                         <h3 class="card-title"><a id='relevantLatestTitle' href="" class="h5"></a></h3>
